fix: Improved contrast for a11y accessibility.

--- a/project1.css
+++ b/project1.css
@@ -4,16 +4,16 @@ body, html {
     width: 100%;
     height: 100%;
     }
-  
+
     body {
         font-family: Roboto;
         font-size: 12px;
         color: #424242;
-        
+
     }
-  
+
     h1, h2, h3, h4, h5 {
-        margin: 0; 
+        margin: 0;
     }
 
     h1 {
@@ -51,7 +51,7 @@ body, html {
         margin-right: auto;
         margin-top: 20px;
         height: 2px;
-        background-color: #7d97ad;
+        background-color: #2d3c49;
     }
 
     img {
@@ -60,7 +60,7 @@ body, html {
 
     .featured {
         font-family: Roboto;
-        color: #7d97ad;
+        color: #2d3c49;
         width: 80%;
         text-align: left;
         margin: 3% 10%;
